[package]
name = "solana-portfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18.4"
solana-sdk = "1.18.4"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-token = "4.0.0"
base64 = "0.21.7"
solana-account-decoder = "1.18.4"